change the colour and background of mejs

--- a/css/main.css
+++ b/css/main.css
@@ -48,3 +48,11 @@
 :root .mejs__poster-img {
   display: block;
 }
+
+.mejs__controls:not([style*='display: none']){
+  background: #d3d3d3;
+}
+
+.mejs__time {
+  color: black;
+}
